Changelog
=========

v0.1.1.0
========

Not released yet.

- New: DeleteAsync() deletes all contents from ResourceName endpoint.
- New: DeleteAsync(resourceName) deletes all contents from resourceName endpoint.
- New: .NET4 PCL
- New: .NET45 PCL
- New: Support for bulk PostAsync methods.
- New: BearerAuthenticator class adds support for Bearer token authentication.
- New: support for including deleted documents in queries. Requires SOFT_DELETE
  feature to be enabled on the server.
- New: support for raw queries.

- Fix: use .ConfigureAndWait(false) when invoking HttpClient methods for
  improved resilience.
- Fix: If-Modified-Since was not respected in GetAsync.

v0.1.0.1
========

Released on 26 November, 2014

- Initial release.