@@ -16,6 +16,9 @@ Not released yet.
   feature to be enabled on the server.
 - New: support for raw queries.
 
+- Fix: DeleteAsync(obj) with obj's Meta.DocumentId at null would request a resource instead of a document delete.
+- Fix: Edit methods still try to execute when Meta.ETag field is null. 
+- Fix: edit methods where obj's Meta.ETag is could request the whole contents delete.
 - Fix: use .ConfigureAndWait(false) when invoking HttpClient methods for
   improved resilience.
 - Fix: If-Modified-Since was not respected in GetAsync.
